--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@aws-cdk/aws-apigatewayv2-alpha": "^2.66.0-alpha.0",
+    "@aws-cdk/aws-apigatewayv2-authorizers": "^1.196.0",
     "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.66.0-alpha.0",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1319.0",
