--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,13 @@
 name: Preview changes
-on: push
+on:
+  #push
+  workflow_dispatch:
 env:
-  AWS_REGION: eu-central-1
+  AWS_REGION: ${{ vars.REGION }}
   JWT_ISSUER: ${{ secrets.JWT_ISSUER }}
   JWT_AUDIENCE: ${{ secrets.JWT_AUDIENCE }}
+  CDK_DEFAULT_REGION: ${{ vars.REGION }}
+  CDK_DEFAULT_ACCOUNT: ${{ secrets.CDK_DEFAULT_ACCOUNT }}
 
 permissions:
   id-token: write
